--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
 											class="far fa-envelope fa-fw mr-2" data-fa-transform="grow-3"></i>
 										gem007bd@gmail.com</a></li>
 								<li><i class="fas fa-mobile-alt fa-fw mr-2" data-fa-transform="grow-6"></i>
-									+4917656896943 </li>
+									+14079465215 </li>
 							</ul>
 						</div>
 						<div class="secondary-info ml-md-auto mt-2">
 							<ul class="resume-social list-unstyled">
-								<li class="mb-3"><a href="https://www.linkedin.com/in/md-aminul-hoque-40771031/"><span
+								<li class="mb-3"><a href="https://www.linkedin.com/in/aminul007bd"><span
 											class="fa-container text-center mr-2">
 											<i class="fab fa-linkedin-in fa-fw"></i></span>Md Aminul Hoque</a>
 								</li>
-								<li class="mb-3"><a href="https://github.com/gem007bd"><span
+								<li class="mb-3"><a href="https://github.com/aminul007bd"><span
 											class="fa-container text-center mr-2">
-											<i class="fab fa-github-alt fa-fw"></i></span>gem007bd</a>
+											<i class="fab fa-github-alt fa-fw"></i></span>aminul007bd</a>
 								</li>
 							</ul>
 						</div>
@@ -53,11 +53,7 @@
 				<section class="resume-section summary-section mb-5">
 					<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Career Summary</h2>
 					<div class="resume-section-content">
-						<p class="mb-0">Experienced software engineer with a passion for developing innovative programs
-							that expedite the efficiency and effectiveness of organizational success. Well-versed in
-							technology and writing code to create systems that are reliable and user-friendly. Skilled
-							team player who has the proven ability to motivate, manage and applied new technologies to
-							build software programs</p>
+						<p class="mb-0">Experience working as a frontend user interface (UI) in a guide firm using JavaScript technologies. In addition, I have strong technical skills in developing advanced websites, including web-based apps, as well as experience as a frontend UI/Web developer garnered from past work in a commercial setting. Furthermore, strong communication and interpersonal skills in developing advanced web-based and mobile applications are required.</p>
 					</div>
 				</section>
 				<div class="row">
@@ -67,6 +63,35 @@
 							</h2>
 							<div class="resume-section-content">
 								<div class="resume-timeline position-relative" id="workExperienceTimeLine">
+									<article class="resume-timeline-item position-relative pb-5">
+										<div class="resume-timeline-item-header mb-2">
+											<div class="d-flex flex-column flex-md-row">
+												<h3 class="resume-position-title font-weight-bold mb-1">Software
+													Developer</h3>
+												<div class="resume-company-name ml-auto">Sarithm Limited, Portland, Oregon</div>
+											</div>
+											<div class="resume-position-time">August 2022 - Present</div>
+										</div>
+										<div class="resume-timeline-item-desc">
+											<p>I create web applications using React-Bootstrap, HTML 5/CSS3, React Query, React Router, and GraphQL on ReactJs frameworks with typescript. I collaborate closely with design and product teams to ensure the development of user-friendly, responsive, and visually attractive UX/UI. To maintain high-quality standards, I employ The React testing library and Cypress for unit and end-to-end testing. Additionally, I leverage GitHub actions to automate various tasks and streamline the build process.</p>
+											<h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies
+												used:</h4>
+											<ul class="list-inline">
+												<li class="list-inline-item"><span
+														class="badge badge-primary badge-pill">React</span></li>
+												<li class="list-inline-item"><span
+														class="badge badge-primary badge-pill">MySQL</span></li>
+												<li class="list-inline-item"><span
+														class="badge badge-primary badge-pill">Typescript</span></li>
+												<li class="list-inline-item"><span
+														class="badge badge-primary badge-pill">JavaScript</span></li>
+												<li class="list-inline-item"><span
+														class="badge badge-primary badge-pill">Nodejs</span></li>
+												<li class="list-inline-item"><span
+														class="badge badge-primary badge-pill">Python</span></li>
+											</ul>
+										</div>
+									</article>
 									<article class="resume-timeline-item position-relative pb-5">
 										<div class="resume-timeline-item-header mb-2">
 											<div class="d-flex flex-column flex-md-row">
